--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ipl-tracker-elite",
   "private": true,
-  "version": "2.5.0",
+  "version": "2.5.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^0.1.2",
-    "lucide-react": "^0.292.0",
+    "@google/genai": "latest",
+    "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.12.0"
