feat: Adjust PWA routing and caching for Vercel
Updates manifest and service worker to use absolute paths for PWA assets and to correctly handle SPA routing on Vercel. The `base` configuration in `vite.config.ts` is changed to accommodate this.

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "IPL Tracker Elite",
   "short_name": "IPL Elite",
   "description": "Herramienta táctica de seguimiento de tratamientos IPL. Offline-first.",
-  "start_url": "./index.html",
-  "scope": "./",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#050505",
   "theme_color": "#050505",
